--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<title>大有时空录入信息</title>
 </head>
 <body>
 
-<h1>我的第一个标题</h1>
-<p>我的第一个段落。</p>
+<h1>CORS账号（单基站）</h1>
+
+<p><2022-07-13>大有服务恢复，目前支持安庆、邢台以及学校，同一个账号支持多地多设备同时接入，现在可统一使用如下账号：</p>
+<p>IP：60.171.129.2
+端口：56001
+Mountpoint：RTCM_PJFW
+用户名：pjfw
+密码：123456</p>
 
 </body>
 </html>
