--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <h1>CORS账号（单基站）</h1>
 
 <p><2022-07-13>大有服务恢复，目前支持安庆、邢台以及学校，同一个账号支持多地多设备同时接入，现在可统一使用如下账号：</p>
-<p>IP：60.171.129.2
-端口：56001
-Mountpoint：RTCM_PJFW
-用户名：pjfw
-密码：123456</p>
+<p>IP：60.171.129.2<br>
+端口：56001<br>
+Mountpoint：RTCM_PJFW<br>
+用户名：pjfw<br>
+密码：123456<br></p>
 
 </body>
 </html>
